--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "myremote.js",
   "dependencies": {
     "input-event": "^1.2.6",
-    "mpd": "^1.3.0"
+    "mpd": "^1.3.0",
+    "node-sense-hat": "0.0.2"
   },
   "devDependencies": {},
   "scripts": {
